assets/css/style.css
body {
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-size: 18px;
  line-height: 34px;
  color: #777777;
  background: url("../images/concrete_seamless.png");
  margin: 0;
}

* {
  box-sizing: border-box;
}

/* general */

.container {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  clear: both;
}

h1,
h2,
h3,
p {
  margin-bottom: 20px;
}

p:last-child {
  margin-bottom: 0;
}

h1,
h2,
h3 {
  font-family: Georgia, Times, "Times New Roman", serif;
  font-weight: 700;
  color: #4aaaa5;
}

h1 {
  padding-bottom: 20px;
  font-size: 30px;
  line-height: 49px;
  border-bottom: 3px solid #dddddd;
}

h2,
h3 {
  font-size: 22px;
}

/* header */

#masthead {
  position: fixed;
  z-index: 99;
  width: 100%;
  margin: 0 0 30px;
  overflow: auto;
  color: #ffffff;
  background: #ffffff;
  border-bottom: 2px solid #cccccc;
}

#logo {
  float: left;
  width: 250px;
  height: 90px;
  font-family: Georgia, Times, "Times New Roman", serif;
  font-size: 30px;
  font-weight: 700;
  line-height: 90px;
  color: #ffffff;
  text-align: center;
  text-decoration: none;
  background: #4aaaa5;
}

nav {
  float: right;
  margin-top: 25px;
}

nav a {
  display: inline-block;
  padding-left: 15px;
  margin-left: 15px;
  line-height: 18px;
  color: #999;
  text-decoration: none;
  border-left: 1px solid #efefef;
}

nav a:first-child {
  border-left: 0 none;
}

/* footer */

footer {
  padding: 30px 0;
  clear: both;
  font-size: 12px;
  color: #ffffff;
  color: #cccccc;
  text-align: center;
  background: #666666;
  border-top: 8px solid #4aaaa5;
  height: 50px;
}

h3, h2 {
  padding-bottom: 20px;
  margin-bottom: 15px;
  line-height: 22px;
  border-bottom: 2px solid #eeeeee;
}

/* main */

#main-container {
  padding-top: 130px;
  min-height: calc(100vh - 70px);
}

.main-section {
  float: left;
  width: 100%;
  max-width: 960px;
  padding: 30px;
  margin: 0 0 40px;
  background: #ffffff;
  border: 1px solid #dddddd;
}

/* portfolio page */

.work {
  position: relative;
  float: left;
  width: 274px;
  margin: 20px 0 25px;
  overflow: auto;
}

.work:nth-child(even) {
  margin-right: 40px;
}

.work img {
  width: 100%;
  border: 0 none;
  opacity: 0.8;
}

.work h3 {
  position: absolute;
  bottom: 20px;
  width: 100%;
  padding: 15px;
  margin-bottom: 0;
  font-weight: 300;
  line-height: 30px;
  color: #ffffff;
  text-align: center;
  background: #4aaaa5;
  border-bottom: 0;
}

.auth-image {
  float: left;
  width: 200px;
  height: auto;
  margin-top: 10px;
  margin-right: 25px;
}

/* contact page */

#contact-form ul {
  margin-bottom: 20px;
  list-style: none;
  width: 100%;
  margin-left: 0;
}

#contact-form li {
  margin-bottom: 10px;
}

label,
input[type=text],
input[type=email],
textarea {
  display: block;
  width: 100%;
}

input[type=text],
input[type=email],
textarea {
  height: 35px;
  padding: 0 10px;
  font-size: 14px;
  border: 1px solid #dddddd;
}

textarea {
  height: 200px;
}

input[type=submit] {
  padding: 10px 30px;
  font-size: 18px;
  color: #ffffff;
  cursor: pointer;
  background: #4aaaa5;
  border: 0 none;
}

@media only screen and (min-width : 961px) and (max-width: 1024px) {
  .container {
    max-width: 1024px;
    margin: 0 auto;
    clear: both;
    }

    #main-container {
      padding-left: 50px;
      padding-right: 50px;
      padding-bottom: 150px;
    }
    
    #masthead {
      margin: 0 0 30px;
      overflow: auto;
      padding-left: 50px;
      padding-right: 50px;
    }
}

@media only screen and (min-width : 768px) and (max-width: 960px) {

  /* general */
  
  .container {
  max-width: 960px;
  margin: 0 auto;
  clear: both;
  }

  #main-container {
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 150px;
  }


  /* header */

  #masthead {
    position: fixed;
    z-index: 99;
    width: 100%;
    margin: 0 0 30px;
    overflow: auto;
    padding-left: 30px;
    padding-right: 30px;
  }

}


@media only screen and (min-width : 641px) and (max-width: 767px) {

  /* general */

  body {
    margin: 0;
  }

  .container {
    max-width: 768px;
    margin: 0 auto;
    clear: both;
  }

  #main-container {
    min-height: calc(100vh - 60px);
    padding-left: 30px;
    padding-right: 0;
    margin-bottom: 50px;
  }

    /* header */

  #masthead {
    position: fixed;
    z-index: 99;
    width: 100%;
    margin: 0 0 30px;
    overflow: auto;
    padding-right: 30px;
  }
  
  #logo {
    width: 250px;
    font-size: 30px;
    margin-left: 30px;
  }
  
  nav {
    float: right;
  }
  
  nav a {
    padding-left: 15px;
    margin-left: 15px;
    line-height: 18px;
  }
  
  /* content */

  .main-section {
    width: 95%;
    padding: 30px;
    margin: auto;
    background: #ffffff;
    border: 1px solid #dddddd;
  }

}

@media only screen and (max-width:640px) {

    /* general */

  body {
    font-size: 16px;
    line-height: 1.2em;
    margin: 0;
  }

      /* header */

  #masthead {
    position: static;
    width: 100%;
  }
  
  #logo {
    position: static;
    width: 100%;
    height: 50px;
    font-size: 20px;
    line-height: 1.2em;
    padding: 10px;
    margin: 0;
  }
  
  nav {
    clear: both;
    float: left;
    width: 100%;
    text-align: center;
    padding: 10px 5px 5px 5px;
    float: none;
    height: 40px;
  }
  
  nav a {
    line-height: 1.2em;
    font-size: 16px;
    padding-left: none;
  }

      /* content */


  #main-container {
    width: 95%;
    padding-top: 3px;
    padding-bottom: 50px;
    margin: 0 auto;
  }

  .container {
    max-width: 620px;
}
  
  .main-section {
    width: 95%;
    padding: 30px;
    margin: auto;
    background: #ffffff;
    border: 1px solid #dddddd;
  }
  

  h1 {
    padding-bottom: 10px;
    font-size: 20px;
    line-height: 1.2em;
  }

    /* index */

  .auth-image {
      clear: both;
      float: left;
      width: 95%;
      height: auto;
      margin-bottom: 20px;
      margin-top: 10px;
      margin-right: 25px;

  }

  p {
    clear: both;
    margin-top: 10px;
  }

    /* footer */

  footer {
    width: 100%;
    bottom: 0;
    padding: 15px 15px 30px 15px;
    clear: both;
    font-size: 12px;
    border-top: 5px solid #4aaaa5;
    height: 15px;
    margin-top: 100px;
  }

    /* portfolio */

.work {
  position: relative;
  float: left;
  width: 100%;
  height: auto;
  margin: 0 0 30px 0;
  overflow: auto;
}

.work img {
  width: 100%;
  border: 0 none;
  opacity: 0.8;
}



}

